@@ -123,6 +123,7 @@ production.
 * (bug 19186) Special:UserLogin's title on Special:SpecialPages now says
   "create account" when the user cannot create an account
 * (bug 31818) 'usercreated' message now supports GENDER
+* (bug 32022) Our phpunit.php script can now be executed from another directory
 
 === API changes in 1.19 ===
 * (bug 19838) siprop=interwikimap can now use the interwiki cache.
